BJS2-68056 Arrays.asList -> Set.of, удален неиспользуемый объект, логика разделена пустыми строками